--- a/Practicas/Lista Doblemente Enlazada/CMakeLists.txt
+++ b/Practicas/Lista Doblemente Enlazada/CMakeLists.txt
@@ -4,4 +4,5 @@ project(Lista_Doblemente_Enlazada)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Lista_Doblemente_Enlazada main.cpp
-        DLList.h)
+        DLList.h
+)
